testing double repo structure

--- a/404.md
+++ b/404.md
@@ -14,3 +14,9 @@ Traverse at your own risk.
 ...maybe let me know about this one though. Might be helpful. 
 <br><br>
 idk u do u
+
+{% for page in site.documents %}
+{% if page.url contains "ecrets" %}
+{{ page.url }}
+{% endif %}
+{% endfor %}
